侧边栏实现

--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -6,17 +6,38 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 <nav>
   <div class="nav">
     <!-- 左侧区域 -->
-    <span class="nav-left">MKBK</span>
+    <span class="nav-left"><a href="/">MKBK</a></span>
     <!-- 右侧区域 -->
     <span class="nav-right">
       <ul class="clickNav">
-        <li><a href="/" class="iconfont blogzhuye active">首页</a></li>
-        <li><a href="/blog" class="iconfont blogboke">博客</a></li>
-        <li><a href="/about" class="iconfont blogguanyu">关于</a></li>
+        <li>
+          <a
+            target="_self"
+            href="/"
+            class="iconfont blogzhuye"
+            :javascript:void(0)>首页</a
+          >
+        </li>
+        <li>
+          <a
+            target="_self"
+            href="/blog"
+            class="iconfont blogboke"
+            :javascript:void(0)>博客</a
+          >
+        </li>
+        <li>
+          <a href="/about" class="iconfont blogguanyu" :javascript:void(0)
+            >关于</a
+          >
+        </li>
       </ul>
     </span>
   </div>
 </nav>
+
+<script></script>
+
 <style lang="less" scoped>
   nav {
     position: absolute;
@@ -26,9 +47,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
     justify-content: center;
     .nav {
       position: absolute;
+      position: fixed;
+      z-index: 1000;
       // top: -50px;
       transition: 0.7s all;
-      width: 1000px;
+      width: 1100px;
       height: 70px;
       background-color: #fff;
       border-radius: 0 0 15px 15px;
@@ -44,13 +67,18 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
       background-color: rgba(206, 206, 206, 0.5);
       .nav-left {
         height: 40px;
-        font-size: 1.4em;
-        padding: 10px 10px;
+        font-size: 2em;
         border-radius: 10px;
         transition: all 0.5s;
         font-family: "字魂白鸽天行体";
-        &:hover {
-          color: blueviolet;
+        a {
+          border-radius: 10px;
+          letter-spacing: 4px;
+          color: #4b5162;
+          &:hover {
+            color: #c35d5b;
+            color: #b6e8fa;
+          }
         }
       }
       .nav-right {
@@ -64,8 +92,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
             }
             a {
               font-weight: bold;
+              letter-spacing: 2px;
+              color: #393e4d;
               &:hover {
-                color: blueviolet;
+                color: #c35d5b;
+                color: #b6e8fa;
               }
             }
           }
