--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import Main from "../components/main.astro";
 import NavigationBar from "../components/NavigationBar.astro";
 import Slider from "../components/Slider.astro";
 import "../styles/global.css";
@@ -10,9 +11,22 @@ import "../styles/global.css";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>博客</title>
+    <style>
+      main div {
+        width: 1200px;
+        max-width: calc(100% - 2em);
+        margin: auto;
+        padding: 3em 1em;
+      }
+    </style>
   </head>
   <body>
     <NavigationBar />
-		<Slider />
+    <Slider />
+    <main>
+      <div>
+        <Main />
+      </div>
+    </main>
   </body>
 </html>
