--- a/src/components/main.astro
+++ b/src/components/main.astro
@@ -4,7 +4,7 @@
 
 <div class="userInfo">
   <a href="/about">
-    <img src="/src/assets/imgs/OIP2.jpg" alt="" />
+    <img src="../../src/assets/imgs/OIP2.jpg" alt="" />
   </a>
 </div>
 <div class="category">
