更改为github图床在线图片

--- a/src/components/main.astro
+++ b/src/components/main.astro
@@ -4,7 +4,10 @@
 
 <div class="userInfo">
   <a href="/about">
-    <img src="../../src/assets/imgs/OIP2.jpg" alt="" />
+    <img
+      src="https://raw.githubusercontent.com/tmkbk/images/main/images/202408292221040.jpg"
+      alt="头像"
+    />
   </a>
 </div>
 <div class="category">
