--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import "../styles/global.css";
 import Slider from "../components/Slider.astro";
 import NavigationBar from "../components/NavigationBar.astro";
 import Main from "../components/main.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -28,7 +29,6 @@ import Main from "../components/main.astro";
 				<Main />
 			</div>
 		</main>
-
-		<script is:inline src="/public/backgroud.js"></script>
+		<Footer />
 	</body>
 </html>
