--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -54,18 +54,18 @@
     padding: 10px;
     overflow: hidden;
     .center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  font-size: 48px;
-  color: #ccc;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      font-size: 48px;
+      color: #ccc;
 
-  h1 {
-    position: absolute;
-    top: 20px;
-  }
-}
+      h1 {
+        position: absolute;
+        top: 20px;
+      }
+    }
     .text {
       font-family: "MiaoZi";
       display: inline-block;
@@ -96,6 +96,60 @@
 
       50% {
         background-color: transparent;
+      }
+    }
+  }
+  @media screen and (max-width: 636px) {
+    .silder {
+      background-image: url(/src/assets/imgs/01background.png);
+      width: 100%;
+      background-repeat: no-repeat;
+      background-size: contain;
+      overflow: hidden;
+      .center {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        font-size: 36px;
+        color: #ccc;
+
+        h1 {
+          position: absolute;
+          top: 20px;
+        }
+      }
+      .text {
+        font-family: "MiaoZi";
+        display: inline-block;
+        position: relative;
+        font-size: 40px;
+        height: 60px;
+        line-height: 60px;
+        color: #f5b7cb;
+      }
+
+      .text::after {
+        content: "";
+        position: absolute;
+        right: -10px;
+        top: 5px;
+        height: 50px;
+        width: 3px;
+        background-color: #f8cede;
+        animation: typeWriter 0.6s steps(1) infinite;
+      }
+
+      /* 打字机特效 */
+      @keyframes typeWriter {
+        0%,
+        100% {
+          background-color: #f8cede;
+        }
+
+        50% {
+          background-color: transparent;
+        }
       }
     }
   }
