--- a/src/components/main.astro
+++ b/src/components/main.astro
@@ -2,33 +2,35 @@
 
 ---
 
-<div style="display: flex;flex-wrap: wrap;flex-direction: column;width:300px;">
-  <!-- 头像区域 -->
-  <div class="userInfo">
-    <a href="/about">
-      <img
-        src="https://raw.githubusercontent.com/tmkbk/images/main/202408301847460.jpg"
-        alt="头像"
-      />
-    </a>
+<div class="box">
+  <div class="box1">
+    <!-- 展示区域 -->
+    <div class="showInfo">这是显示信息的区域</div>
   </div>
-  <div class="showInfo">这是显示信息的区域</div>
-  <!-- 标签区域 -->
-  <div class="category">
-    <h5>Tags</h5>
-    <div>
-      <span class="iconfont blogtags tags">Web</span>
-      <span class="iconfont blogtags tags">HTML</span>
-      <span class="iconfont blogtags tags">CSS</span>
-      <span class="iconfont blogtags tags">javascript</span>
-      <span class="iconfont blogtags tags">vue</span>
-      <span class="iconfont blogtags tags">React.js</span>
+  <div class="box2">
+    <!-- 头像区域 -->
+    <div class="userInfo">
+      <a href="/about">
+        <img
+          src="https://raw.githubusercontent.com/tmkbk/images/main/202408301847460.jpg"
+          alt="头像"
+        />
+      </a>
+    </div>
+
+    <!-- 标签区域 -->
+    <div class="category">
+      <h5>Tags</h5>
+      <div>
+        <span class="iconfont blogtags tags">Web</span>
+        <span class="iconfont blogtags tags">HTML</span>
+        <span class="iconfont blogtags tags">CSS</span>
+        <span class="iconfont blogtags tags">javascript</span>
+        <span class="iconfont blogtags tags">vue</span>
+        <span class="iconfont blogtags tags">React.js</span>
+      </div>
     </div>
   </div>
-</div>
-<div style="display: flex;flex-direction: row;justify-content: flex-end;">
-  <!-- 展示区域 -->
-  
 </div>
 
 <style lang="less" scoped>
@@ -82,12 +84,27 @@
   }
 
   .showInfo {
+    padding: 40px 20px;
     width: 880px;
     margin-left: 20px;
-    background-color: red;
+    background-color: rgba(255, 255, 255, 0.7);
     position: relative;
-    height: 1000px;
     float: right;
-    top: -100px;
+    border-radius: 10px;
+  }
+  .box {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .box1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+  .box2 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 300px;
   }
 </style>
