--- a/src/components/main.astro
+++ b/src/components/main.astro
@@ -11,10 +11,7 @@
     <!-- 头像区域 -->
     <div class="userInfo">
       <a href="/about">
-        <img
-          src="https://raw.githubusercontent.com/tmkbk/images/main/202408301847460.jpg"
-          alt="头像"
-        />
+        <img src="../../src/assets/imgs/OIP2.jpg" alt="头像" />
       </a>
     </div>
 
