--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -105,6 +105,7 @@
       width: 100%;
       background-repeat: no-repeat;
       background-size: contain;
+      padding: 0px;
       overflow: hidden;
       .center {
         display: flex;
