--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,34 +1,8 @@
 ---
-import "../styles/global.css";
-import Slider from "../components/Slider.astro";
-import NavigationBar from "../components/NavigationBar.astro";
-import Main from "../components/main.astro";
-import Footer from "../components/Footer.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "首页";
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>玛卡巴卡</title>
-		<style>
-			main div {
-				width: 1200px;
-				max-width: calc(100% - 2em);
-				margin: auto;
-				padding: 3em 1em;
-			}
-		</style>
-	</head>
-	<body>
-		<NavigationBar />
-		<Slider />
-		<main>
-			<div>
-				<Main />
-			</div>
-		</main>
-		<Footer />
-	</body>
-</html>
+<BaseLayout>
+	<h2>插槽内容</h2>
+</BaseLayout>
