--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,8 +1,12 @@
 ---
+import BlogContent from "../components/BlogContent.astro";
+import Main from "../components/main.astro";
 import BaseLayout from "./BaseLayout.astro";
 const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout>
-
-</BaseLayout>
+  <Main>
+    <BlogContent />
+  </Main></BaseLayout
+>
