--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,13 @@
 ---
+import BlogList from "../components/BlogList.astro";
+import Main from "../components/main.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "首页";
 ---
 
 <BaseLayout>
-	<h2>插槽内容</h2>
+	<!-- <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} /> -->
+	<Main pageTitle={pageTitle}>
+		<BlogList />
+	</Main>
 </BaseLayout>
