--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const date = new Date();
   footer {
     .container {
       margin: 0 auto;
-      width: 1200px;
+      width: 100%;
       height: 60px;
       text-align: center;
       line-height: 45px;
