--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import ThemeIcon from "./ThemeIcon.astro"; // 引入主题切换
 ---
 
 <script src="../styles/background.js"></script>
