--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,12 +1,35 @@
 ---
-import BlogContent from "../components/BlogContent.astro";
 import Main from "../components/main.astro";
 import BaseLayout from "./BaseLayout.astro";
 const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout>
+  c
   <Main>
-    <BlogContent />
-  </Main></BaseLayout
->
+    <div class="box1">
+      <!-- 展示区域 -->
+      <div class="showInfo">
+        <button>返回上级</button>
+        <span>{frontmatter.pubDate}</span>
+        <slot />
+      </div>
+    </div>
+  </Main>
+</BaseLayout>
+<style lang="less" scoped>
+  .box1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    .showInfo {
+      padding: 40px 20px;
+      width: 880px;
+      margin-left: 20px;
+      background-color: rgba(255, 255, 255, 0.7);
+      position: relative;
+      float: right;
+      border-radius: 10px;
+    }
+  }
+</style>
