--- a/src/components/BlogList.astro
+++ b/src/components/BlogList.astro
@@ -11,8 +11,17 @@ const pageTitle = "mkbk的 Astro 学习博客";
     <ul>
       {
         allPosts.map((post) => (
-          <li>
-            <a href={post.url}>{post.frontmatter.title}</a>
+          <li class="blogList">
+            <a href={post.url}>
+              <div class="image">
+                <img
+                  src={post.frontmatter.image.url}
+                  alt={post.frontmatter.image.alt}
+                />
+              </div>
+
+              <div class="descript">{post.frontmatter.title}</div>
+            </a>
           </li>
         ))
       }
@@ -33,6 +42,33 @@ const pageTitle = "mkbk的 Astro 学习博客";
       position: relative;
       float: right;
       border-radius: 10px;
+    }
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 0;
+      .blogList {
+        list-style-type: none;
+        width: 200px;
+        background-color: #eee;
+        border-radius: 10px;
+        margin: 10px;
+        transition: all 0.7s;
+        &:hover {
+          transform: translateY(-5px);
+        }
+        &:nth-child(4n) {
+        }
+        .image {
+          width: 200px;
+          height: 112px;
+          overflow: hidden;
+          border-radius: 10px 10px 0 0;
+        }
+        .descript {
+          padding: 10px;
+        }
+      }
     }
   }
 </style>
