--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,18 +1,19 @@
 ---
 import Main from "../components/main.astro";
 import BaseLayout from "./BaseLayout.astro";
+const allPosts = await Astro.glob("../pages/posts/*.md");
 const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout>
-  c
   <Main>
     <div class="box1">
       <!-- 展示区域 -->
       <div class="showInfo">
-        <button>返回上级</button>
         <span>{frontmatter.pubDate}</span>
         <slot />
+        <p>{allPosts}</p>
+        <a href="">下一篇</a>
       </div>
     </div>
   </Main>
