--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,18 +1,20 @@
 ---
+import Category from "../components/Category.astro";
 import Main from "../components/main.astro";
 import BaseLayout from "./BaseLayout.astro";
-const allPosts = await Astro.glob("../pages/posts/*.md");
+// const allPosts = await Astro.glob("../pages/posts/*.md");
 const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout>
   <Main>
-    <div class="box1">
+    <!-- 插入标签页 -->
+    <Category slot="tags" tags={frontmatter.tags} />
+    <div class="box1" slot="show">
       <!-- 展示区域 -->
       <div class="showInfo">
         <span>{frontmatter.pubDate}</span>
         <slot />
-        <p>{allPosts}</p>
         <a href="">下一篇</a>
       </div>
     </div>
