--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,11 @@
 ---
 import Main from "../components/main.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
+import AboutMe from "../components/AboutMe.astro";
 ---
 
-<BaseLayout> <Main /></BaseLayout>
+<BaseLayout>
+  <Main>
+    <AboutMe />
+  </Main>
+</BaseLayout>
