--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,6 +6,6 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 <BaseLayout>
   <Main>
-    <BlogList />
+    <BlogList slot="show"/>
   </Main>
 </BaseLayout>
