--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,6 @@ const pageTitle = "首页";
 <BaseLayout>
 	<!-- <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} /> -->
 	<Main pageTitle={pageTitle}>
-		<BlogList />
+		<BlogList slot="show" />
 	</Main>
 </BaseLayout>
