--- a/src/components/BlogList.astro
+++ b/src/components/BlogList.astro
@@ -56,17 +56,21 @@ const pageTitle = "mkbk的 Astro 学习博客";
         transition: all 0.7s;
         &:hover {
           transform: translateY(-5px);
+          box-shadow: 0px 3px 10px 0px rgb(172, 171, 171);
         }
-        &:nth-child(4n) {
-        }
-        .image {
-          width: 200px;
-          height: 112px;
-          overflow: hidden;
-          border-radius: 10px 10px 0 0;
-        }
-        .descript {
-          padding: 10px;
+        a {
+          &:hover{
+            color:#6bb7d3;
+          }
+          .image {
+            width: 200px;
+            height: 112px;
+            overflow: hidden;
+            border-radius: 10px 10px 0 0;
+          }
+          .descript {
+            padding: 10px;
+          }
         }
       }
     }
