--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -103,7 +103,7 @@ import ThemeIcon from "./ThemeIcon.astro"; // 引入主题切换
           color: #4b5162;
           &:hover {
             color: #c35d5b;
-            color: #b6e8fa;
+            color: #6bb7d3;
           }
         }
       }
@@ -114,7 +114,7 @@ import ThemeIcon from "./ThemeIcon.astro"; // 引入主题切换
             text-decoration: none;
             padding: 0 10px;
             .active {
-              color: #b6e8fa;
+              color: #6bb7d3;
             }
             a {
               font-weight: bold;
@@ -122,7 +122,7 @@ import ThemeIcon from "./ThemeIcon.astro"; // 引入主题切换
               color: #393e4d;
               &:hover {
                 color: #c35d5b;
-                color: #b6e8fa;
+                color: #6bb7d3;
               }
             }
           }
@@ -174,8 +174,6 @@ import ThemeIcon from "./ThemeIcon.astro"; // 引入主题切换
               width: 20px;
               height: 20px;
               color: red;
-            }
-            &:hover {
             }
           }
         }
