--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,6 +6,6 @@ import AboutMe from "../components/AboutMe.astro";
 
 <BaseLayout>
   <Main>
-    <AboutMe />
+    <AboutMe slot="show"/>
   </Main>
 </BaseLayout>
