--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -2,7 +2,7 @@
 import Category from "../components/Category.astro";
 import Main from "../components/main.astro";
 import BaseLayout from "./BaseLayout.astro";
-import "../styles/mdBase.css"
+import "../styles/mdBase.css";
 // const allPosts = await Astro.glob("../pages/posts/*.md");
 const { frontmatter } = Astro.props;
 ---
@@ -16,19 +16,19 @@ const { frontmatter } = Astro.props;
       <div class="showInfo">
         <h1>{frontmatter.title}</h1>
         <div class="showBaseInfo">
-          <div>💻编辑时间： <span>{frontmatter.pubDate}</span></div>
+          <div>💻编辑时间： <code>{frontmatter.pubDate}</code></div>
           <div>
-            🔍字数统计： <span>{frontmatter.minutesRead.words}字</span>
+            🔍字数统计： <code>{frontmatter.minutesRead.words}字</code>
           </div>
           <div>
-            🕑阅读时长： <span
+            🕑阅读时长： <code
               >{Math.floor(frontmatter.minutesRead.minutes)}min{
                 Math.floor(
                   (frontmatter.minutesRead.minutes -
                     Math.trunc(frontmatter.minutesRead.minutes)) *
                     60,
                 )
-              }s</span
+              }s</code
             >
           </div>
         </div>
