--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -77,7 +77,7 @@ import ThemeIcon from "./ThemeIcon.astro"; // 引入主题切换
       z-index: 1000;
       // top: -50px;
       transition: 0.7s all;
-      width: 80%;
+      width: 1200px;
       height: 70px;
       background-color: #fff;
       border-radius: 0 0 15px 15px;
