--- a/src/styles/mdBase.css
+++ b/src/styles/mdBase.css
@@ -1,7 +1,24 @@
-p {
-  font-size: 16px;
+:root {
+  --yinyong: #6194a7;
+  --lineHight: 2em;
 }
-
-pre {
-  background-color: #fff;
+p {
+  font-size: 1em;
+  line-height: var(--lineHight);
+}
+h1 {
+  font-size: 2.8em;
+}
+h2 {
+  font-size: 1.8em;
+}
+code {
+  border-radius: 5px;
+}
+blockquote {
+  border-left: 4px solid var(--yinyong);
+  padding: 0 0 0 8px;
+}
+blockquote p {
+  font-size: 20px;
 }
