--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,10 +5,14 @@ const date = new Date();
 
 <footer>
   <div class="container">
-    <p>@2024{date.getFullYear() === 2024 ? "" : "-" + date.getFullYear()} 玛卡巴卡</p>
+    <p>
+      @2024{date.getFullYear() === 2024 ? "" : "-" + date.getFullYear()} 玛卡巴卡
+    </p>
+  </div>
+  <div class="toTop" onclick="window.scrollTo(0, 0); ">
+    <img src="/src/assets/imgs/置顶火箭.gif" alt="" srcset="" />
   </div>
 </footer>
-
 <style lang="less" scoped>
   footer {
     .container {
@@ -17,6 +21,19 @@ const date = new Date();
       height: 60px;
       text-align: center;
       line-height: 45px;
+    }
+    .toTop {
+      float: right;
+      display: none;
+      bottom: 10px;
+      right: 10px;
+      position: fixed;
+      img {
+        width: 100px;
+        &:hover {
+          cursor: pointer;
+        }
+      }
     }
   }
 </style>
