--- a/src/styles/mdBase.less
+++ b/src/styles/mdBase.less
@@ -19,6 +19,8 @@ h2 {
 // 代码块样式
 code {
   border-radius: 5px;
+  margin: 0 5px;
+  background: rgba(0, 0, 0, 0.06);
 }
 
 // 这是引用块样式
@@ -29,5 +31,23 @@ blockquote {
   // 引用块中文本样式
   p {
     font-size: 20px;
+  }
+}
+
+details {
+  box-shadow: 0.1rem 0.1rem 0.2rem #00000028;
+  border-radius: 8px;
+
+  summary {
+    margin-top: 15px;
+
+    padding: 10px;
+    background-color: #f3f3f3;
+  }
+
+  p {
+    background-color: #fafbfc;
+    padding: 0 15px !important;
+    font-size: 18px;
   }
 }
