--- a/src/components/main.astro
+++ b/src/components/main.astro
@@ -54,4 +54,12 @@
     flex-direction: column;
     width: 300px;
   }
+  @media screen and (max-width: 720px) {
+    .box {
+      display: flex;
+      flex-direction: column-reverse;
+      flex-wrap: nowrap;
+      align-items: center;
+    }
+  }
 </style>
