--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import "../styles/mobile .css";
 import Slider from "../components/Slider.astro";
 import NavigationBar from "../components/NavigationBar.astro";
 import Footer from "../components/Footer.astro";
@@ -29,6 +30,5 @@ import Footer from "../components/Footer.astro";
 			</div>
 		</main>
 		<Footer />
-
 	</body>
 </html>
