--- a/src/components/BlogList.astro
+++ b/src/components/BlogList.astro
@@ -15,7 +15,11 @@ const pageTitle = "mkbk的 Astro 学习博客";
             <a href={post.url}>
               <div class="image">
                 <img
-                  src={post.frontmatter.image.url?post.frontmatter.image.url:"https://docs.astro.build/assets/rose.webp"}
+                  src={
+                    post.frontmatter.image.url
+                      ? post.frontmatter.image.url
+                      : "https://docs.astro.build/assets/rose.webp"
+                  }
                   alt={post.frontmatter.image.alt}
                 />
               </div>
