--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,6 +19,13 @@ import Footer from "../components/Footer.astro";
 				margin: auto;
 				padding: 3em 1em;
 			}
+			@media screen and (max-width: 720px) {
+				main div {
+					width: 100%;
+					max-width: 100%;
+					padding: 0em;
+				}
+			}
 		</style>
 	</head>
 	<body>
