--- a/src/styles/mdBase.less
+++ b/src/styles/mdBase.less
@@ -55,3 +55,9 @@ details {
 .expressive-code .frame.is-terminal .header {
   z-index: 0;
 }
+
+@media screen and (max-width: 720px) {
+  .expressive-code {
+    margin-bottom: 30px;
+  }
+}
