--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const date = new Date();
 <footer>
   <div class="container">
     <p>
-      @2024{date.getFullYear() === 2024 ? "" : "-" + date.getFullYear()} 玛卡巴卡
+      ©2024{date.getFullYear() === 2024 ? "" : "-" + date.getFullYear()} 玛卡巴卡
     </p>
   </div>
   <div class="toTop" onclick="window.scrollTo(0, 0); ">
