--- a/src/styles/mdBase.less
+++ b/src/styles/mdBase.less
@@ -16,6 +16,10 @@ h2 {
   font-size: 1.8em;
 }
 
+p img {
+  box-shadow: 1px 1px 7px 1px rgba(154, 154, 154, 0.6);
+}
+
 // 代码块样式
 code {
   border-radius: 5px;
@@ -27,11 +31,9 @@ code {
 blockquote {
   border-left: 4px solid var(--yinyong);
   padding: 0 0 0 8px;
+  font-size: 20px;
 
-  // 引用块中文本样式
-  p {
-    font-size: 20px;
-  }
+
 }
 
 details {
